Reworking build files to import Spring.